@@ -2,5 +2,7 @@
 <project version="4">
   <component name="VcsDirectoryMappings">
     <mapping directory="$PROJECT_DIR$" vcs="Git" />
+    <mapping directory="$PROJECT_DIR$/Menu" vcs="Git" />
+    <mapping directory="C:\Users\Alex_\PycharmProjects\py_side_scroller\Menu" vcs="Git" />
   </component>
 </project>
