@@ -4,6 +4,7 @@ pulled out load animations into a helper function
 finally got around to adding comments and doc strings to funcs and classes.
 player now finishes full attack sequence per attack, disables all other abilities
 enemy now faces correct direction
+animate helper function created - stops repeated code of selecting images to animate
 
 V 0.2
 Finished up random background generation
